# Cartagra_FHD_CHS

./: .gitignore  README.md  SCRIPT.PAK  checkformat.py  genuitextcpp.py  jifan.json  leven.json  match.py  pak.py  uitext.py  uitext.txt  writeback.py
SCRIPT_FHD/: _varstr.py  solve.py  solvev2.py
font/: drawfont.py  gencharsetv3.py  gencharsetv4.py  info12_dicStr_sort2.txt  info12_string_sort_utf-8.txt  info40v_dicStr_sort2.txt  info40v_string_sort_utf-8.txt  infosys36_dicStr_sort2.txt  infosys36_string_sort_utf-8.txt  infosys41_dicStr_sort2.txt  infosys41_string_sort_utf-8.txt  newcharset1.txt  newcharset2.txt  newcharset3.txt  newcharset4.txt  newinfo1.txt  newinfo2.txt  newinfo3.txt  newinfo4.txt  remap_charset12.txt  remap_charset22.txt  remap_charset32.txt  remap_charset4.txt  remap_charset42.txt
image/: fakeothcg.py  pakimage.py  pakimage_png2cz.py
kouryaku/: solve_kouryaku_mhtml.py  誠也の部屋【カルタグラ ～ツキ狂イノ病～ ＜REBIRTH FHD SIZE EDITION＞ 攻略】.mhtml
patch/: CMakeLists.txt  erroruitext.cpp  othcg.cpp  patch.cpp  patch.rc  tolongtexts.cpp  uitext.cpp
patch/desktop-overlay-lyric-f2e45f0bc335c9bb30cd24640d0539d002b51833/: LICENSE  README.md  overlay-lyric.sln
patch/desktop-overlay-lyric-f2e45f0bc335c9bb30cd24640d0539d002b51833/lyric/: OverlayLyric.cpp  OverlayLyric.h  dllmain.cpp  lyric.cpp  lyric.h  lyric.vcxproj  lyric.vcxproj.filters
patch/desktop-overlay-lyric-f2e45f0bc335c9bb30cd24640d0539d002b51833/x64/Release/: lyric.lib
patch/lyric/: GraphicsRoundRectPath.hpp  OverlayLyric.cpp  OverlayLyric.h  Utils.hpp  Wnd.cpp  Wnd.h  lyric.cpp  lyric.h
(+1610 files in other folders)
